# cppinecone

./: .clang-format  .clang-tidy  .devcontainer.json  .gitignore  404.html  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  TODO.md  docker_build.sh  example_squad_vector.json  index.html  main.cpp  mkdocs.sh  mkdocs.yml  run_build.sh  run_docs.sh  run_tests.sh  sitemap.xml
.github/workflows/: pages.yml
api_reference/: index.html
cppinecone/doxygen/html/: accepted_8hpp__dep__incl.md5  annotated.html  arguments_8hpp_source.html  curl__result_8hpp__dep__incl.md5  dir_000002_000003.html  dir_000002_000005.html  dir_000003_000002.html  dir_000004_000005.html  dir_001793009f1b89a091d7b550f0c7da7d.js  dir_001793009f1b89a091d7b550f0c7da7d_dep.map  dir_27be34b557409b5a1e0e23904f331da8.html  dir_5ba98758062a936bbd5cce917c2a998c.js  dir_b4daaf513d47a79074b1d8d99dfe7245.js  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_eae6f506d9d2a852a58bc6b139b5e21b.js  error_8hpp__dep__incl.md5  examples.html  examples.js  files.html  filters_8hpp.html  filters_8hpp.js  filters_8hpp__dep__incl.map  filters_8hpp__dep__incl.md5  filters_8hpp_source.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.js  index__operations_8hpp.html  index__operations_8hpp__dep__incl.map  index__operations_8hpp__dep__incl.md5  index__operations_8hpp_source.html  index__types_8hpp.html  index__types_8hpp__dep__incl.map  index__types_8hpp_source.html  inherit_graph_0.md5  inherit_graph_10.map  inherit_graph_12.map  inherit_graph_12.md5  (+182 more)
cppinecone/doxygen/html/search/: all_1.js  all_11.js  all_13.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_3.js  all_6.js  all_7.js  all_8.js  all_d.js  all_e.js  classes_0.js  classes_17.js  classes_18.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_2.js  enums_3.js  enums_4.js  enums_6.js  enumvalues_1.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  files_9.js  files_b.js  files_c.js  functions_0.js  (+17 more)
customization/: index.html
development/architecture/: index.html
development/development_environment/: index.html
docs/: api_reference.md  build.md  customization.md  doxygen  index.md  installation.md  introduction.md  metadata_query_api.md  quickstart.md
docs/cppinecone/: doxygen
docs/development/: architecture.md  development_environment.md
doxygen/html/: CMakeLists_8txt-example.html  accepted_8hpp.html  accepted_8hpp__dep__incl.map  accepted_8hpp_source.html  annotated_dup.js  api__metadata_8hpp.html  api__metadata_8hpp__dep__incl.map  api__metadata_8hpp__dep__incl.md5  api__metadata_8hpp_source.html  arguments_8hpp.html  arguments_8hpp.js  arguments_8hpp__dep__incl.map  arguments_8hpp__dep__incl.md5  classes.html  curl__result_8hpp.html  curl__result_8hpp__dep__incl.map  curl__result_8hpp_source.html  dir_000002_000004.html  dir_000003_000004.html  dir_000003_000005.html  dir_000005_000004.html  dir_001793009f1b89a091d7b550f0c7da7d.html  dir_001793009f1b89a091d7b550f0c7da7d_dep.md5  dir_27be34b557409b5a1e0e23904f331da8.js  dir_27be34b557409b5a1e0e23904f331da8_dep.map  dir_27be34b557409b5a1e0e23904f331da8_dep.md5  dir_5ba98758062a936bbd5cce917c2a998c.html  dir_5ba98758062a936bbd5cce917c2a998c_dep.map  dir_5ba98758062a936bbd5cce917c2a998c_dep.md5  dir_b4daaf513d47a79074b1d8d99dfe7245.html  dir_b4daaf513d47a79074b1d8d99dfe7245_dep.map  dir_b4daaf513d47a79074b1d8d99dfe7245_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_eae6f506d9d2a852a58bc6b139b5e21b.html  dir_eae6f506d9d2a852a58bc6b139b5e21b_dep.map  dir_eae6f506d9d2a852a58bc6b139b5e21b_dep.md5  error_8hpp.html  error_8hpp__dep__incl.map  (+240 more)
doxygen/html/search/: all_10.js  all_12.js  all_14.js  all_19.js  all_1b.js  all_2.js  all_4.js  all_5.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_6.js  enums_0.js  enums_1.js  enums_5.js  enums_7.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_6.js  files_a.js  functions_10.js  functions_12.js  functions_16.js  functions_17.js  (+10 more)
examples/: CMakeLists.txt  main.cpp  metadata_filtering.hpp
include/: http_client.hpp
include/pinecone/: index_types.hpp  pinecone.hpp  result.hpp
include/pinecone/domain/: curl_result.hpp  index_operations.hpp  meta_operations.hpp  method.hpp  operation.hpp  operation_type.hpp  result.hpp  vector_operations.hpp
include/pinecone/net/: arguments.hpp  http_client.hpp  url_builder.hpp
include/pinecone/types/: accepted.hpp  api_metadata.hpp  common.hpp  error.hpp  filters.hpp  index_types.hpp  parser.hpp  vector_metadata.hpp  vector_types.hpp
include/pinecone/util/: curl_result.hpp  logging.hpp  result.hpp  visit.hpp
installation/: index.html
metadata_query_api/: index.html
quickstart/: index.html
search/: search_index.json
src/: index_types.cpp  pinecone.cpp  result.cpp
src/domain/: curl_result.cpp  index_operations.cpp  meta_operations.cpp  method.cpp  operation.cpp  operation_type.cpp  vector_operations.cpp
src/net/: arguments.cpp  http_client.cpp  url_builder.cpp
src/types/: accepted.cpp  api_metadata.cpp  error.cpp  filters.cpp  index_types.cpp  parser.cpp  vector_metadata.cpp  vector_types.cpp
src/util/: curl_result.cpp  logging.cpp  result.cpp  visit.cpp
tests/: CMakeLists.txt  basic_vector_operations_tests.cpp  collection_operations_tests.cpp  entrypoint.cpp  index_operations_tests.cpp  meta_operations_tests.cpp  test.cpp  test_util.hpp  vector_operations_tests.cpp
